--- a/Using Custom Fields in Looker Explores /GSP983.md
+++ b/Using Custom Fields in Looker Explores /GSP983.md
@@ -70,7 +70,7 @@
 19. Set the drop down to `is greater than` and set its value to **`200`**.
 20. Run the query by clicking on the Run button in the top right of the page to view the results.
 21. Under Order Items section, click `Order Count` to add it to the view.
-22. In the data view, click `Settings` on the **`Order`** Count column.
+22. In the data view, click `Settings` on the **`Order Count`** column.
 23. Click `Calculations` > **`% of column`**.
 ---
 
