--- a/Engineer Data for Predictive Modeling with BigQuery ML: Challenge Lab/GSP327.md
+++ b/Engineer Data for Predictive Modeling with BigQuery ML: Challenge Lab/GSP327.md
@@ -36,9 +36,9 @@
 **🌐Launch Cloud Shell:**
 Start your Bigquery session by [clicking here](https://console.cloud.google.com/bigquery)
 ---
-## Task 1:(Change TABLE_NAME, FARE_AMOUNT_NAME, TRIP_DISTANCE_NO, FARE_AMOUNT, PASSENGER_COUNT)--->Run
+### Task 1:(Change TABLE_NAME, FARE_AMOUNT_NAME, TRIP_DISTANCE_NO, FARE_AMOUNT, PASSENGER_COUNT)--->Run
 
-```
+```cpp
 CREATE OR REPLACE TABLE
   taxirides.TABLE_NAME AS
 SELECT
@@ -66,9 +66,9 @@ WHERE
   AND passenger_count > PASSENGER_COUNT
 ```
 
-## Task 2:(Change MODEL_NAME, FARE_AMOUNT_NAME, TABLE_NAME)--->Run
+### Task 2:(Change MODEL_NAME, FARE_AMOUNT_NAME, TABLE_NAME)--->Run
 
-```
+```cpp
 CREATE OR REPLACE MODEL taxirides.MODEL_NAME
 TRANSFORM(
   * EXCEPT(pickup_datetime)
@@ -82,9 +82,9 @@ AS
 SELECT * FROM taxirides.TABLE_NAME
 ```
 
-## Task 3:(Change MODEL_NAME)--->Run
+### Task 3:(Change MODEL_NAME)--->Run
 
-```
+```cpp
 CREATE OR REPLACE TABLE taxirides.2015_fare_amount_predictions
   AS
 SELECT * FROM ML.PREDICT(MODEL taxirides.MODEL_NAME,(
