--- a/Employing Best Practices for Improving the Usability of LookML Projects/GSP1020.md
+++ b/Employing Best Practices for Improving the Usability of LookML Projects/GSP1020.md
@@ -381,7 +381,11 @@ explore: events {
   }
 }
 ```
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
 
+> ⚡ **Note:** Save your changes after completing each step to ensure proper configuration.
 ---
 ## 🎉 **Congratulations! Lab Completed Successfully!** 🏆  
 
