--- a/Troubleshooting Data Models in Looker/GSP1019.md
+++ b/Troubleshooting Data Models in Looker/GSP1019.md
@@ -268,6 +268,12 @@ explore: events {
   
 }
 ```
+* Click **Validate LookML** and then click **Commit Changes** & **Push**.
+* Add a **commit message** and click **Commit**.
+* Lastly, click **Deploy to Production**.
+
+> ⚡ **Note:** Save your changes after completing each step to ensure proper configuration.
+
 * Save **Task 3** Look as **`Top 10 Users With Highest Average Sales`**
 ```
 Top 10 Users With Highest Average Sales
