--- a/Troubleshooting Data Models in Looker/GSP1019.md
+++ b/Troubleshooting Data Models in Looker/GSP1019.md
@@ -274,6 +274,11 @@ explore: events {
 
 > ⚡ **Note:** Save your changes after completing each step to ensure proper configuration.
 
+### For Task 3:
+
+* Open a new Looker window in a new tab.
+* Navigate to Explore > **Order Items**.
+* Expand the view for **ArcadeWithus**
 * Save **Task 3** Look as **`Top 10 Users With Highest Average Sales`**
 ```
 Top 10 Users With Highest Average Sales
