--- a/Troubleshooting Data Models in Looker/GSP1019.md
+++ b/Troubleshooting Data Models in Looker/GSP1019.md
@@ -279,6 +279,9 @@ explore: events {
 * Open a new Looker window in a new tab.
 * Navigate to Explore > **Order Items**.
 * Expand the view for **ArcadeWithus**
+* Click once on the column for Average Sales to sort in `descending order`.
+
+
 * Save **Task 3** Look as **`Top 10 Users With Highest Average Sales`**
 ```
 Top 10 Users With Highest Average Sales
