--- a/Troubleshooting Data Models in Looker/GSP1019.md
+++ b/Troubleshooting Data Models in Looker/GSP1019.md
@@ -280,8 +280,11 @@ explore: events {
 * Navigate to Explore > **Order Items**.
 * Expand the view for **ArcadeWithus**
 * Click once on the column for Average Sales to sort in `descending order`.
-
-
+* For Row Limit, enter: **10**
+* Click **Run**.
+* Expand the Visualization pane, and select the `Table` visualization.
+* Click Settings (Settings gear icon).
+* Click **Save** > `Save As a Look`.
 * Save **Task 3** Look as **`Top 10 Users With Highest Average Sales`**
 ```
 Top 10 Users With Highest Average Sales
