--- a/Troubleshooting Data Models in Looker/GSP1019.md
+++ b/Troubleshooting Data Models in Looker/GSP1019.md
@@ -31,7 +31,7 @@
 > ✅ **NOTE:** *Watch Full Video to get Full Scores on Check My Progress.*
 
 ### 🚨 First, click the toggle button to turn on the Development mode.
-![](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
+![Hello](https://github.com/user-attachments/assets/1a2d8b5f-1a0d-4659-b846-5b56e679a1a9)
 
 ---
 ### 1. Create View Named **`user_order_lifetime`** and add the following LookML code:
