--- a/Google Sheets: Getting Started/GSP469.md
+++ b/Google Sheets: Getting Started/GSP469.md
@@ -33,7 +33,8 @@
 
 ### For TASK 1:
 * Click [Explore this data](https://docs.google.com/spreadsheets/d/19iLO-XbrqqWRuqphkXTax0lFn71NW6crJK504JvAxoU/edit#gid=599358521) to open a sample spreadsheet.
-* Make a copy. Select **File** > **Make a copy**.
+* Make a copy.
+* Select **File** > **Make a copy**.
 * Leave the Name and Folder fields at the default values and click **Make a copy**.
 
 - ### DOWNLOAD CSV FILE FROM [HERE](https://github.com/Arcade-With-Us/Google-Cloud-Labs/raw/refs/heads/main/Google%20Sheets:%20Getting%20Started/exported-data.csv)
