--- a/Filtering Explores with LookML/GSP892.md
+++ b/Filtering Explores with LookML/GSP892.md
@@ -34,9 +34,9 @@
 - ## First turn on the `Development Mode`
 ![Image](https://github.com/user-attachments/assets/f5aebb47-7c7b-4416-b170-9c9f3a32df61)
 
-- ### Go to training_ecommerce.model file & Replace with this Query :
+- ### Go to `training_ecommerce.model` file & Replace with this Query :
 
-```
+```cpp
 connection: "bigquery_public_data_looker"
 
 # include all the views
